@@ -510,4 +510,4 @@ searchSubtitlesAction.Action.text=Search subtitles
 searchSubtitlesAction.Action.shortDescription=Search subtitles using opensubtitles.org
 searchSubtitlesAction.Action.smallIcon=${iconsPath}subtitles.png
 
-fileIsBeingAlreadyDownloading=File is being already downloading.
+fileIsBeingAlreadyDownloading=File is already downloading
